style: fix email overflow

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -566,6 +566,10 @@ video {
   inset: 0px;
 }
 
+.-right-5 {
+  right: -1.25rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -580,10 +584,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.-right-5 {
-  right: -1.25rem;
 }
 
 .z-10 {
@@ -611,6 +611,10 @@ video {
   margin-top: 5rem;
 }
 
+.mt-32 {
+  margin-top: 8rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -627,8 +631,12 @@ video {
   margin-top: 55px;
 }
 
-.mt-32 {
-  margin-top: 8rem;
+.-ml-12 {
+  margin-left: -3rem;
+}
+
+.-ml-10 {
+  margin-left: -2.5rem;
 }
 
 .flex {
@@ -639,12 +647,24 @@ video {
   display: none;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
 
 .h-8 {
   height: 2rem;
+}
+
+.h-\[25px\] {
+  height: 25px;
+}
+
+.h-\[46\.92px\] {
+  height: 46.92px;
 }
 
 .h-\[500px\] {
@@ -661,26 +681,6 @@ video {
 
 .h-auto {
   height: auto;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-\[46\.92\] {
-  height: 46.92;
-}
-
-.h-\[46\.92px\] {
-  height: 46.92px;
-}
-
-.h-\[25px\] {
-  height: 25px;
-}
-
-.h-\[55px\] {
-  height: 55px;
 }
 
 .min-h-\[calc\(100vh-144px\)\] {
@@ -719,10 +719,6 @@ video {
   width: 100%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .max-w-\[1100px\] {
   max-width: 1100px;
 }
@@ -735,12 +731,20 @@ video {
   max-width: 1607px;
 }
 
-.max-w-\[80\%\] {
-  max-width: 80%;
+.max-w-\[250px\] {
+  max-width: 250px;
 }
 
 .max-w-\[300px\] {
   max-width: 300px;
+}
+
+.max-w-\[80\%\] {
+  max-width: 80%;
+}
+
+.max-w-\[200px\] {
+  max-width: 200px;
 }
 
 .basis-1\/2 {
@@ -799,10 +803,6 @@ video {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -819,8 +819,16 @@ video {
   gap: 0.25rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-12 {
   gap: 3rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-4 {
@@ -837,18 +845,6 @@ video {
 
 .gap-9 {
   gap: 2.25rem;
-}
-
-.gap-3 {
-  gap: 0.75rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .overflow-hidden {
@@ -934,6 +930,11 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -944,14 +945,9 @@ video {
   padding-bottom: 3rem;
 }
 
-.py-3\.5 {
-  padding-top: 0.875rem;
-  padding-bottom: 0.875rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-3 {
@@ -959,46 +955,29 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-3\.5 {
+  padding-top: 0.875rem;
+  padding-bottom: 0.875rem;
 }
 
 .pb-4 {
   padding-bottom: 1rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
-.pt-40 {
-  padding-top: 10rem;
-}
-
 .pb-5 {
   padding-bottom: 1.25rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
 }
 
 .pr-6 {
   padding-right: 1.5rem;
 }
 
-.text-center {
-  text-align: center;
+.pt-20 {
+  padding-top: 5rem;
 }
 
-.text-start {
-  text-align: start;
+.text-center {
+  text-align: center;
 }
 
 .text-2xl {
@@ -1068,12 +1047,12 @@ video {
   transition-duration: 300ms;
 }
 
-.hover\:bg-primary\/90:hover {
-  background-color: rgb(42 8 150 / 0.9);
-}
-
 .hover\:bg-\[\#4482C2\]\/80:hover {
   background-color: rgb(68 130 194 / 0.8);
+}
+
+.hover\:bg-primary\/90:hover {
+  background-color: rgb(42 8 150 / 0.9);
 }
 
 .hover\:text-primary:hover {
@@ -1088,6 +1067,12 @@ video {
 .group:hover .group-hover\:translate-x-1 {
   --tw-translate-x: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@media (min-width: 640px) {
+  .sm\:mt-10 {
+    margin-top: 2.5rem;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1109,6 +1094,14 @@ video {
 
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .md\:max-w-full {
+    max-width: 100%;
   }
 
   .md\:flex-row {
@@ -1170,18 +1163,6 @@ video {
   .lg\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
-  }
-
-  .lg\:mt-48 {
-    margin-top: 12rem;
-  }
-
-  .lg\:mt-56 {
-    margin-top: 14rem;
-  }
-
-  .lg\:mt-\[400px\] {
-    margin-top: 400px;
   }
 
   .lg\:mt-\[350px\] {
@@ -1263,10 +1244,6 @@ video {
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:mt-\[500px\] {
-    margin-top: 500px;
-  }
-
   .\32xl\:mt-\[550px\] {
     margin-top: 550px;
   }
